force-app/main/default/objects/Customer_Sales_Management__c/Customer_Sales_Management__c.object-meta.xml
<CustomObject>
    <label>Customer Sales Management</label>
    <nameField>
        <displayFormat>CSM-{0000000}</displayFormat>
        <label>CSM Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Sales Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>