force-app/main/default/objects/Customer_Sales_Management__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Selected Customer should be of Revolution record Type and Available for OLF should be True.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Revolution</value>
        </filterItems>
        <filterItems>
            <field>Account.Rv_Available_for_OLF__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Sales Management</relationshipLabel>
    <relationshipName>Customer_Sales_Management</relationshipName>
    <type>Lookup</type>
</CustomField>