force-app/main/default/objects/Customer_Sales_Management__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Customer Sales Management</relationshipLabel>
    <relationshipName>Customer_Sales_Management</relationshipName>
    <type>Lookup</type>
</CustomField>