force-app/main/default/objects/Customer_Sales_Management__c/fields/Sales_CBM__c.field-meta.xml
<CustomField>
    <fullName>Sales_CBM__c</fullName>
    <label>Sales(CBM)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>