force-app/main/default/objects/Customer_Sales_Management__c/fields/SoldTo_Number__c.field-meta.xml
<CustomField>
    <fullName>SoldTo_Number__c</fullName>
    <formula>Customer__r.Sold_To_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SoldTo Number</label>
    <type>Text</type>
</CustomField>