force-app/main/default/objects/Customer_Sales_Management__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tranche__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Online_Deal_Count__c</columns>
    <columns>Plant__c</columns>
    <columns>Plant_Code__c</columns>
    <columns>Product_Category__c</columns>
    <columns>Sales_CBM__c</columns>
    <columns>SoldTo_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>